# convex-gd

./: Cargo.toml  README.md  client.gd
examples/simple_loop/: .gitignore  client.gd  convex.gdextension  icon.svg.import  main.gd  main.tscn  project.godot
examples/simple_loop/convex_app/: .gitignore  package-lock.json  package.json
examples/simple_loop/convex_app/convex/: chat_app.ts  schema.ts
examples/simple_loop/convex_app/convex/_generated/: api.d.ts
gd_files/: client.gd  convex.gdextension
src/: lib.rs
